--- a/frontend/styles/variables/_all.css
+++ b/frontend/styles/variables/_all.css
@@ -1,8 +1,9 @@
-@import "animations.css";
+/* @import "animations.css"; */
 @import "borders.css";
-@import "buttons.css";
+/* @import "buttons.css"; */
 @import "colors.css";
-@import "gradients.css";
+/* @import "gradients.css"; */
+@import "shadows.css";
 @import "sizes.css";
 @import "typography.css";
-@import 'normalize.css';
+/* @import 'normalize.css'; */
