--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -2,10 +2,12 @@
 layout: default
 ---
 
-<section class="container">
-  <hgroup>
-    <h1><%= data.title %></h1>
-    <p><%= data.subtitle %></p>
-  </hgroup>
-  <%= yield %>
+<section>
+  <br-container>
+    <hgroup>
+      <h1><%= data.title %></h1>
+      <p><%= data.subtitle %></p>
+    </hgroup>
+    <%= yield %>
+  </br-container>
 </section>
