--- a/src/_partials/home/_benefits.erb
+++ b/src/_partials/home/_benefits.erb
@@ -4,7 +4,7 @@
         <br-grid class="">
             <header class="">
                 <hgroup>
-                    <p>Benefits</p>
+                    <section-label>Benefits</section-label>
                     <h2>Unlock Your Full Potential</h2>
                     <p>Not only can we help you overcome your business challenges, but you'll also enjoy these game-changing perks that will transform your professional life.</p>
                 </hgroup>
