--- a/src/_partials/home/_features_section.erb
+++ b/src/_partials/home/_features_section.erb
@@ -2,7 +2,7 @@
     <br-container>
         <header class="">
             <hgroup>
-                <p>Features</p>
+                <section-label>Features</section-label>
                 <h2>What's Included When You Work With Us</h2>
                 <p>Comprehensive solutions designed to propel your business forward.</p>
             </hgroup>
