--- a/src/_partials/home/_hero_split.erb
+++ b/src/_partials/home/_hero_split.erb
@@ -28,14 +28,12 @@
 <style>
 
     section[data-layout="hero-split"] {
-        padding-block: var(--size-fluid-6);
-        // background-color: var(--gradient-3);
-        // background-image: var(--hero-gradient);
+        // padding-block: var(--size-fluid-6);
+        background-color: var(--stone-3);
     }
 
     section[data-layout="hero-split"] > br-container > br-grid[data-layout="50-50"] {
         --grid-alignment: center;
-        text-align: left;
     }
 
 </style>
