--- a/src/_partials/home/_problems.erb
+++ b/src/_partials/home/_problems.erb
@@ -2,7 +2,7 @@
     <br-container>
         <header class="">
             <hgroup>
-                <p>Problem</p>
+                <section-label>Problem</section-label>
                 <h2>Is Your Business Stuck in Neutral?</h2>
                 <p>67% of small businesses fail within the first 10 years. Don't let yours be one of them.</p>
             </hgroup>
