--- a/src/_partials/home/_process.erb
+++ b/src/_partials/home/_process.erb
@@ -2,7 +2,7 @@
     <br-container>
         <header class="">
             <hgroup>
-                <p>Process</p>
+                <section-label>Process</section-label>
                 <h2>Your Path to Business Transformation</h2>
                 <p>Achieving your business goals has never been easier. Our streamlined process takes you from struggle to success in just three simple steps.</p>
             </hgroup>
