--- a/src/_partials/home/_solution.erb
+++ b/src/_partials/home/_solution.erb
@@ -4,7 +4,7 @@
         <br-grid class="">
             <header class="">
                 <hgroup>
-                    <p>Solution</p>
+                    <section-label>Solution</section-label>
                     <h2>Your Roadmap to Business Success</h2>
                     <p></p>
                 </hgroup>
