--- a/src/_components/shared/site_footer.erb
+++ b/src/_components/shared/site_footer.erb
@@ -4,9 +4,7 @@
   <br-grid>
   
     <div class="flow">
-      <p class="text-bold">
-        Bridgetown Rise
-      </p>
+      <p><b>Bridgetown Rise</b></p>
       <p>
         A Bridgetown starter template using modern vanilla CSS, fluid type, fluid spacing, flexible layout and progressive enhancement and other goodies.
       </p>
@@ -15,7 +13,7 @@
 
     <%# TODO: Fix the left margin conflict with PicoCSS %>
     <nav>
-      <p class="text-bold">Quick Links</p>
+      <p><b>Quick Links</b></p>
       <ul role="list">
         <% site.data.nav.each do |item| %>
           <li>
@@ -26,7 +24,7 @@
     </nav>
 
     <div class="flow">
-      <p class="text-bold">Social Links</p>
+      <p><b>Social Links</b></p>
       <nav id="social" class="" aria-label="Social links">
         
         <%# TODO: refactor into a flex container %>
