--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -2,12 +2,10 @@
 layout: default
 ---
 
-<section>
-  <br-container>
+<section class="container">
     <hgroup>
       <h1><%= data.title %></h1>
       <p><%= data.subtitle %></p>
     </hgroup>
     <%= yield %>
-  </br-container>
 </section>
