--- a/src/_partials/home/_benefits.erb
+++ b/src/_partials/home/_benefits.erb
@@ -33,13 +33,7 @@
 <style>
 
 #benefits {
-    // background-color: var(--blue-1);
-    // background-image: var(--gradient-9);
-}
-
-#features br-grid-item {
-    background-color: var(--gray-3);
-    height: 100%;
+    background-color: var(--color-bg-darker);
 }
 
 </style>
