--- a/src/_partials/home/_solution.erb
+++ b/src/_partials/home/_solution.erb
@@ -24,8 +24,7 @@
 <style>
 
 #solution {
-    background-color: var(--gray-2);
-    // background-image: var(--gradient-19);
+    // background-color: var(--color-bg-darker);
 }
 
 </style>
