--- a/src/_partials/home/_features_section.erb
+++ b/src/_partials/home/_features_section.erb
@@ -75,16 +75,7 @@
 </section>
 
 <style>
-
-#features {
-    // --gradient-22: linear-gradient(to bottom right, rgba(172, 182, 229, 0.7), rgba(134, 253, 232, 0.7));
-    // background-color: var(--jungle-1);
-    // background-image: var(--gradient-28);
-}
-
-#features br-grid-item {
-    // background-color: var(--gray-3);
-    // height: 100%;
-}
-
+    #features {
+        background-color: var(--color-bg-darker);
+    }
 </style>
