--- a/src/_partials/home/_hero_split.erb
+++ b/src/_partials/home/_hero_split.erb
@@ -5,7 +5,7 @@
             <br-grid-item>
                 <hgroup>
                     <h1><%= data.title %></h1>
-                    <p><%= data.subtitle %></p>
+                    <p><%= data.hero_description %></p>
                 </hgroup>
             </br-grid-item>
 
@@ -29,7 +29,7 @@
 
     section[data-layout="hero-split"] {
         // padding-block: var(--size-fluid-6);
-        background-color: var(--stone-3);
+        background-color: var(--color-bg-darker);
     }
 
     section[data-layout="hero-split"] > br-container > br-grid[data-layout="50-50"] {
