--- a/src/_partials/home/_process.erb
+++ b/src/_partials/home/_process.erb
@@ -33,9 +33,7 @@
 <style>
 
 #process {
-    --gradient-22: linear-gradient(to bottom right, rgba(172, 182, 229, 0.7), rgba(134, 253, 232, 0.7));
-    background-color: var(--gray-2);
-    // background-image: var(--gradient-22);
+    // background-color: var(--color-bg-darker);
 }
 
 </style>
