--- a/frontend/styles/global/global-styles.css
+++ b/frontend/styles/global/global-styles.css
@@ -26,7 +26,7 @@
 body {
   color: var(--color-dark);
   background: var(--color-light);
-  font-size: var(--font-size-fluid-0);
+  font-size: var(--font-size-fluid-1);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -35,6 +35,10 @@ body {
 /* make the footer 'sticky' */
 main {
   flex-grow: 1;
+}
+
+nav ul {
+  list-style: none;
 }
 
 section {
