refactor to CUBE CSS

--- a/frontend/styles/global/_all.css
+++ b/frontend/styles/global/_all.css
@@ -1,5 +1,6 @@
 /* @import 'fonts.css'; */
+@import 'reset.css';
+@import 'variables.css';
 @import "global-styles.css";
 @import 'layout.css';
-@import 'code.css';
-/* @import 'reset.css'; */
+/* @import 'code.css'; */
