--- a/src/_components/shared/site_header.erb
+++ b/src/_components/shared/site_header.erb
@@ -1,5 +1,5 @@
 <header role="banner">
-  <br-container>
+  <div class="container">
     <site-header class="">
       <a href="/" id="logo">
         <%= site.metadata.title %>
