--- a/src/_partials/home/_benefits.erb
+++ b/src/_partials/home/_benefits.erb
@@ -1,16 +1,16 @@
-<section class="" id="benefits">
-    <br-container>
+<section class="region" id="benefits">
+    <div class="container flow">
 
-        <br-grid class="">
+        <div class="grid">
             <header class="">
                 <hgroup>
-                    <section-label>Benefits</section-label>
+                    <p class="section-label">Benefits</p>
                     <h2>Unlock Your Full Potential</h2>
                     <p>Not only can we help you overcome your business challenges, but you'll also enjoy these game-changing perks that will transform your professional life.</p>
                 </hgroup>
             </header>
 
-            <br-grid-item>
+            <div class="flow">
                 <article>
                     <h3>Skyrocket Your Productivity</h3>
                     <p>Our tailored time management strategies help you accomplish more in less time. You'll finally break free from overwhelm and have energy left for what truly matters.</p>
@@ -24,10 +24,10 @@
                     <p>Our personal branding helps you stand out. You'll gain more speaking engagements, media opportunities, and high-profile collaborations, expanding your reach and impact.</p>
                 </article>
 
-            </br-grid-item>
+            </div>
 
-        </br-grid>
-    </br-container>
+        </div>
+    </div>
 </section>
 
 <style>
