--- a/src/_partials/home/_features.erb
+++ b/src/_partials/home/_features.erb
@@ -1,5 +1,5 @@
-<section class="" id="features">
-    <br-container>
+<section class="region" id="features">
+    <div class="container">
         <header class="">
             <hgroup>
                 <h2>Features</h2>
@@ -7,15 +7,15 @@
             </hgroup>
         </header>
 
-        <br-grid class="">
-            <br-grid-item>
+        <div class="grid">
+            <div>
                 <p>Featured image can go either left or right.</p>
-            </br-grid-item>
+            </div>
             
             <img src="https://placehold.co/778x438?text=Hello+Ruby">
 
-        </br-grid>
-    </br-container>
+        </div>
+    </div>
 </section>
 
 <style>
@@ -24,7 +24,7 @@
     // background-color: var(--gray-2);
 }
 
-#features br-grid-item {
+#features .grid > div {
     background-color: var(--gray-3);
     height: 100%;
 }
