--- a/src/_partials/home/_features_section.erb
+++ b/src/_partials/home/_features_section.erb
@@ -1,14 +1,14 @@
-<section class="" id="features">
-    <br-container>
+<section class="region" id="features">
+    <div class="container">
         <header class="">
             <hgroup>
-                <section-label>Features</section-label>
+                <p class="section-label">Features</p>
                 <h2>What's Included When You Work With Us</h2>
                 <p>Comprehensive solutions designed to propel your business forward.</p>
             </hgroup>
         </header>
 
-        <br-grid class="">
+        <div class="grid">
 
             <article>
                 <h3>Personalized Strategy Sessions</h3>
@@ -70,8 +70,8 @@
                 <p>Receive regular check-ins and guidance, keeping you on track to achieve your business goals.</p>
             </article>
 
-        </br-grid>
-    </br-container>
+        </div>
+    </div>
 </section>
 
 <style>
