--- a/src/_partials/home/_hero_split.erb
+++ b/src/_partials/home/_hero_split.erb
@@ -1,13 +1,11 @@
 <%# TODO: refactor into a component with multiple versions %>
-<section id="hero" data-layout="hero-split">
-    <br-container>
-        <br-grid data-layout="50-50">
-            <br-grid-item>
-                <hgroup>
-                    <h1><%= data.title %></h1>
-                    <p><%= data.hero_description %></p>
-                </hgroup>
-            </br-grid-item>
+<section id="hero" data-layout="hero-split" class="region">
+    <div class="container">
+        <div class="grid" data-layout="50-50">
+            <hgroup>
+                <h1><%= data.title %></h1>
+                <p><%= data.hero_description %></p>
+            </hgroup>
 
             <picture>
                 <source srcset="/images/<%= data.hero_image %>-600w.webp 600w,
@@ -21,11 +19,15 @@
                 <img src="images/<%= data.hero_image %>-1200w.jpg" width="1200" height="806" loading="lazy">
             </picture>
 
-        </br-grid>
-    </br-container>
+        </div>
+    </div>
 </section>
 
 <style>
+
+    #hero {
+        --region-space: var(--size-fluid-7);
+    }
 
     section[data-layout="hero-split"] {
         // padding-block: var(--size-fluid-6);
