--- a/src/_partials/home/_problems.erb
+++ b/src/_partials/home/_problems.erb
@@ -1,16 +1,15 @@
 <section class="" id="problems">
-    <br-container>
+    <div class="container flow">
         <header class="">
             <hgroup>
-                <section-label>Problem</section-label>
+                <p class="section-label">Problem</p>
                 <h2>Is Your Business Stuck in Neutral?</h2>
                 <p>67% of small businesses fail within the first 10 years. Don't let yours be one of them.</p>
             </hgroup>
         </header>
 
-        <br-grid class="">
+        <div class="grid">
 
-<%# TODO: should I refactor the `br-grid-item` to a `br-card` component? Would that make more sense? %>
             <article>
                 <h3>Overwhelm and Burnout</h3>
                 <p>Are you working longer hours but seeing diminishing returns? Do you feel like you're constantly putting out fires instead of growing your business?.</p>
@@ -26,8 +25,8 @@
                 <p>Is your business overly dependent on you, making it hard to take time off? Do you find yourself saying "no" to opportunities because you're already stretched thin?</p>
             </article>
 
-        </br-grid>
-    </br-container>
+        </div>
+    </div>
 </section>
 
 <style>
