--- a/src/_partials/home/_process.erb
+++ b/src/_partials/home/_process.erb
@@ -1,16 +1,14 @@
 <section class="" id="process">
-    <br-container>
+    <div class="container">
         <header class="">
             <hgroup>
-                <section-label>Process</section-label>
+                <div class="section-label">Process</div>
                 <h2>Your Path to Business Transformation</h2>
                 <p>Achieving your business goals has never been easier. Our streamlined process takes you from struggle to success in just three simple steps.</p>
             </hgroup>
         </header>
 
-        <br-grid class="">
-
-<%# TODO: should I refactor the `br-grid-item` to a `br-card` component? Would that make more sense? %>
+        <div class="grid">
             <article>
                 <h3>1. Book Your Strategy Session</h3>
                 <p>Schedule a free 30-minute call to discuss your business challenges and goals, so we can tailor our approach to your unique needs.</p>
@@ -27,13 +25,5 @@
             </article>
 
         </br-grid>
-    </br-container>
+    </div>
 </section>
-
-<style>
-
-#process {
-    // background-color: var(--color-bg-darker);
-}
-
-</style>
