--- a/src/_components/shared/site_header.css
+++ b/src/_components/shared/site_header.css
@@ -1,6 +1,7 @@
-body > header > br-container {
+body > header > .container {
   /* --padding-block: var(--size-fluid-2); */
   --padding-block: 0;
+  padding-inline: var(--gutter);
 }
 
 body > header[role="banner"] {
@@ -16,7 +17,6 @@ site-header {
   grid-template-columns: max-content 1fr;
   /* max-inline-size: var(--wrapper-max-width, 85rem); */
   margin-inline: auto;
-  /* padding-inline: var(--gutter); */
 }
 
 site-header #logo {
