--- a/src/_layouts/markdown.erb
+++ b/src/_layouts/markdown.erb
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-
-<br-container data-layout="content">
-  <h1><%= data.title %></h1>
-  <%= yield %>
-</br-container>
+<section class="region">
+  <div class="container prose flow">
+    <h1><%= data.title %></h1>
+    <%= yield %>
+  </div>
+</section>
