--- a/src/_partials/home/_beliefs.erb
+++ b/src/_partials/home/_beliefs.erb
@@ -1,16 +1,8 @@
-<section id="full-bleed">
-    <br-container>
-        <header class="">
+<section class="region">
+    <div class="container">
+        <header>
             <h2>It doesn't have to be this way</h2>
         </header>
         <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you—not the other way around.</p>
-    </br-container>
+    </div>
 </section>
-
-
-<style>
-#full-bleed {
-    background-color: var(--color-bg-darker);
-}
-
-</style>
