--- a/src/_partials/home/_solution.erb
+++ b/src/_partials/home/_solution.erb
@@ -1,30 +1,22 @@
-<section class="" id="solution">
-    <br-container>
+<section class="region" id="solution">
+    <div class="container">
 
-        <br-grid class="">
-            <header class="">
+        <div class="grid">
+            <header class="flow">
                 <hgroup>
-                    <section-label>Solution</section-label>
+                    <p class="section-label">Solution</p>
                     <h2>Your Roadmap to Business Success</h2>
                     <p></p>
                 </hgroup>
-                <button>Get Started</button>
+                <button class="button">Get Started</button>
                 <button class="outline">Learn More</button>
             </header>
-            <br-grid-item>
+            <div class="flow">
                 <p><b>Tired of struggling to grow your business?</b> I get it. You've put in countless hours, but success seems just out of reach. The constant worry about finding new clients and standing out in a crowded market can be overwhelming.</p>
                 <p>I'm Sarah, a <b>business growth strategist</b> with over a decade of experience helping entrepreneurs like you thrive. I've guided hundreds of small businesses to <b>double their revenue</b> and achieve sustainable growth. My proven methods cut through the noise, focusing on what truly matters for your success. <b>And we can do the same for you</b></p>
-            </br-grid-item>
+            </div>
             
 
-        </br-grid>
-    </br-container>
+        </div>
+    </div>
 </section>
-
-<style>
-
-#solution {
-    // background-color: var(--color-bg-darker);
-}
-
-</style>
