tweak layout and design

--- a/frontend/styles/composition/container.css
+++ b/frontend/styles/composition/container.css
@@ -8,3 +8,7 @@ A common wrapper/container
   padding-inline: var(--gutter);
   position: relative;
 }
+
+.container[data-layout="full-bleed"] {
+  max-width: 100%;
+}
