--- a/src/_components/shared/site_header.erb
+++ b/src/_components/shared/site_header.erb
@@ -1,6 +1,6 @@
 <header role="banner">
   <div class="container">
-    <site-header class="">
+    <div class="site-head">
       <a href="/" id="logo">
         <%= site.metadata.title %>
       </a>
@@ -21,6 +21,6 @@
           </ul>
       </nav>
 
-    </site-header>
-  </br-container>
+    </div>
+  </div>
 </header>
