--- a/src/_partials/home/_beliefs.erb
+++ b/src/_partials/home/_beliefs.erb
@@ -1,8 +1,16 @@
-<section class="region">
-    <div class="container">
+<section class="region" id="beliefs">
+    <div class="container" data-layout="full-bleed">
         <header>
             <h2>It doesn't have to be this way</h2>
         </header>
-        <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you—not the other way around.</p>
+        <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you — not the other way around.</p>
     </div>
 </section>
+
+<style>
+
+#beliefs {
+    background-color: var(--stone-3);
+}
+
+</style>
