--- a/src/_partials/home/_problems.erb
+++ b/src/_partials/home/_problems.erb
@@ -1,4 +1,4 @@
-<section class="" id="problems">
+<section class="region" id="problems">
     <div class="container flow">
         <header class="">
             <hgroup>
