--- a/src/_partials/home/_solution.erb
+++ b/src/_partials/home/_solution.erb
@@ -9,14 +9,13 @@
                     <p></p>
                 </hgroup>
                 <button class="button">Get Started</button>
-                <button class="outline">Learn More</button>
+                <button class="button" data-button-variant="secondary">Learn More</button>
             </header>
             <div class="flow">
                 <p><b>Tired of struggling to grow your business?</b> I get it. You've put in countless hours, but success seems just out of reach. The constant worry about finding new clients and standing out in a crowded market can be overwhelming.</p>
                 <p>I'm Sarah, a <b>business growth strategist</b> with over a decade of experience helping entrepreneurs like you thrive. I've guided hundreds of small businesses to <b>double their revenue</b> and achieve sustainable growth. My proven methods cut through the noise, focusing on what truly matters for your success. <b>And we can do the same for you</b></p>
             </div>
             
-
         </div>
     </div>
 </section>
