--- a/frontend/styles/blocks/button.css
+++ b/frontend/styles/blocks/button.css
@@ -5,6 +5,8 @@
   --button-y-padding: 1.1em;
   --button-gutter: 0.5ch;
   --focus-color: var(--color-primary);
+  --button-border-width: 2px;
+  --button-border-color: transparent;
 
   display: inline-flex;
   gap: var(--button-gutter);
@@ -19,8 +21,9 @@
   text-transform: uppercase;
   letter-spacing: var(--uppercase-kerning);
   text-decoration: none;
-  font-size: var(--size-step-00);
-  font-weight: var(--font-bold);
+  font-size: var(--font-size-fluid-0);
+  font-weight: var(--font-weight-6);
+  border: var(--button-border-width) solid var(--button-border-color);
 }
 
 
@@ -35,8 +38,8 @@
 
 /* Variant exceptions */
 .button[data-button-variant='secondary'] {
-  --button-bg: var(--color-dark-glare);
-  --button-text: var(--color-primary);
+  --button-bg: var(--color-light);
+  --button-text: var(--color-dark);
   --focus-color: var(--color-dark);
-  --corner-secondary-color: var(--color-primary);
+  --button-border-color: var(--color-dark);
 }
