--- a/frontend/styles/variables/typography.css
+++ b/frontend/styles/variables/typography.css
@@ -32,6 +32,11 @@
     --font-size-fluid-1: clamp(1rem, 2vw, 1.5rem);
     --font-size-fluid-2: clamp(1.5rem, 3vw, 2.5rem);
     --font-size-fluid-3: clamp(2rem, 4vw, 3.5rem);
+    --font-size-fluid-4: clamp(2.5rem, 12vw, 4.5rem);
+    --font-size-fluid-5: clamp(3rem, 15vw, 5.5rem);
+    --font-size-fluid-6: clamp(3.5rem, 18vw, 6.5rem);
+    --font-size-fluid-7: clamp(4rem, 21vw, 7.5rem);
+    --font-size-fluid-8: clamp(4.5rem, 24vw, 8.5rem);
 
     --font-lineheight-00: .95;
     --font-lineheight-0: 1.1;
