--- a/src/_components/shared/site_header.erb
+++ b/src/_components/shared/site_header.erb
@@ -1,4 +1,4 @@
-<header role="banner">
+<header role="banner" data-theme="dim">
   <div class="container">
     <div class="site-head">
       <a href="/" id="logo">
