--- a/frontend/styles/blocks/button.css
+++ b/frontend/styles/blocks/button.css
@@ -1,3 +1,4 @@
+button,
 .button {
   --button-bg: var(--color-primary);
   --button-text: var(--color-dark);
@@ -26,17 +27,18 @@
   border: var(--button-border-width) solid var(--button-border-color);
 }
 
-
+button,
 .button:hover {
   filter: brightness(105%);
 }
 
-
+button:active,
 .button:active {
   transform: scale(99%);
 }
 
 /* Variant exceptions */
+button[data-button-variant='secondary'],
 .button[data-button-variant='secondary'] {
   --button-bg: var(--color-light);
   --button-text: var(--color-dark);
