--- a/frontend/styles/variables/colors.css
+++ b/frontend/styles/variables/colors.css
@@ -19,6 +19,21 @@
     --stone-11: #252521;
     --stone-12: #121210;
 
+    /* Gray */
+    --gray-0: #f8f9fa;
+    --gray-1: #f1f3f5;
+    --gray-2: #e9ecef;
+    --gray-3: #dee2e6;
+    --gray-4: #ced4da;
+    --gray-5: #adb5bd;
+    --gray-6: #868e96;
+    --gray-7: #495057;
+    --gray-8: #343a40;
+    --gray-9: #212529;
+    --gray-10: #16191d;
+    --gray-11: #0d0f12;
+    --gray-12: #030507;
+
     /* Red */    
     --red-0: #fff5f5;
     --red-1: #ffe3e3;
