--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -5,5 +5,5 @@ layout: default
   <div class="container prose flow">
     <h1><%= data.title %></h1>
     <%= yield %>
-  </div>>
+  </div>
 </section>
